# practice-code

./: README.md
.github/workflows/: iron-alpha-lab-ci.yml
alphaforge/: PRODUCT_BRIEF.md  README.md
alphaforge-ai/: README.md  START_HERE.md
iron-alpha-lab/: README.md  pyproject.toml
iron-alpha-lab/docs/: DEMO_PITCH.md  PRODUCT_BRIEF.md
iron-alpha-lab/src/iron_alpha_lab/: __init__.py  main.py  news.py  signals.py  stubs.py
iron-alpha-lab/tests/: test_news.py  test_signals.py  test_stubs_and_pitch.py
market-neuron/: .gitignore  README.md
