[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iron-alpha-lab"
version = "0.1.0"
description = "GenAI + market intelligence demo starter"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Codex Builder"}]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
iron-alpha-lab = "iron_alpha_lab.main:cli"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
